# winamp-macos

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  Package.swift  README.md  WEBAMP_REFERENCE.md  build.sh
.github/workflows/: build.yml
Resources/: Info.plist
Sources/: AudioPlaybackControlling.swift  AudioPlayer.swift  ContentView.swift  EqualizerView.swift  LyricsParser.swift  M3UParser.swift  NowPlayingInfo.swift  PlaylistManager.swift  PlaylistView.swift  RemoteCommandController.swift  SpectrumView.swift  Track.swift  TrackMetadataParser.swift  WinampApp.swift  WinampColors.swift  WinampDockGraph.swift  WinampPanelDescriptor.swift  WinampPanelKind.swift  WinampPanelLayoutState.swift  WinampPanelPositionStore.swift  WinampPanelStackModel.swift  WinampPanelWindowManager.swift  WinampSkinSprites.swift
Sources/Audio/: AudioEffectUnit.swift  AudioFeatureBus.swift  AudioFormatInfo.swift  AudioGraph.swift  EQAudioEffect.swift  EQFParser.swift  EQSettingsStore.swift  FFTSpectrumAnalyzer.swift  ReplayGain.swift  SpectrumAnalyzerDebugProbe.swift  SpectrumAutoLeveler.swift  VolumeModel.swift  WaveformRingBuffer.swift  WinampEQBands.swift
Sources/Development/: DevelopmentSessionStore.swift
Sources/Playlist/: PlaylistFileService.swift  PlaylistStateStore.swift  (+2 more)
Winamp.xcodeproj/: project.pbxproj
docs/: ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  VISUALIZER_PERFORMANCE.md  WEBAMP_REFERENCE.md  WINDOWING_REVIEW.md
scripts/: format-swift.sh  generate-fixtures.sh  lint-swift.sh  pyproject.toml  run-tests.sh  shoot.sh
scripts/winamp_fixtures/: generate.py
(+84 files in other folders)
