[project]
name = "winamp-test-fixtures"
version = "0.1.0"
description = "Generate binary test fixtures for Winamp macOS"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
generate-fixtures = "winamp_fixtures.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["winamp_fixtures"]
